# ChangeLog for media-gfx/k3d
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/k3d/ChangeLog,v 1.42 2009/03/23 22:58:33 maekke Exp $

*k3d-0.7.11.0 (23 Mar 2009)

  23 Mar 2009; Markus Meier <maekke@gentoo.org>
  +files/k3d-0.7.11.0-fix-potfiles.patch, metadata.xml,
  +k3d-0.7.11.0.ebuild:
  version bump by Ryoichiro Suzuki in bug #263245

  15 Mar 2009; Markus Meier <maekke@gentoo.org> k3d-0.6.7.0-r1.ebuild:
  drop librsvg dep, only needed if you call "make icons" wrt bug #258065

  27 Jan 2009; Gordon Malm <gengor@gentoo.org> k3d-0.6.7.0-r1.ebuild:
  Disable stack-protector on C++ for <gcc-4, bug #230119.

  05 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org> -k3d-0.6.7.0.ebuild:
  remove old, dep-broken ebuild

  22 Aug 2008; Markus Meier <maekke@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*k3d-0.6.7.0-r1 (13 May 2008)

  13 May 2008; Samuli Suominen <drac@gentoo.org>
  +files/k3d-0.6.7.0-gcc43.patch, +files/k3d-0.6.7.0-sigc2.patch,
  +k3d-0.6.7.0-r1.ebuild:
  Fix compability with libsigc++-2.2 wrt #218763 and building with GCC 4.3
  wrt #218760, thanks to Peter Alfredsen.

  15 Jan 2008; Markus Meier <maekke@gentoo.org>
  -files/k3d-0.5.0.34-nls.patch, -files/k3d-0.5.0.37-nls.patch,
  -k3d-0.5.0.37-r1.ebuild, -k3d-0.6.2.0.ebuild, k3d-0.6.7.0.ebuild:
  add missing pkgconfig dep (bug #205839) and remove old

*k3d-0.6.7.0 (31 Aug 2007)

  31 Aug 2007; Luca Barbato <lu_zero@gentoo.org> +k3d-0.6.7.0.ebuild:
  New version

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  k3d-0.5.0.37-r1.ebuild, k3d-0.6.2.0.ebuild:
  Drop virtual/x11 references.

  09 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> -k3d-0.4.5.0.ebuild:
  Removed old ebuild with broken autotools handling for bug #160014.

  04 Jan 2007; Steve Dibb <beandog@gentoo.org> k3d-0.4.5.0.ebuild,
  k3d-0.5.0.37-r1.ebuild, k3d-0.6.2.0.ebuild:
  Fix graphviz deps, bug 142726
