@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/k3d
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/k3d/ChangeLog,v 1.42 2009/03/23 22:58:33 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/k3d/ChangeLog,v 1.43 2009/03/24 16:44:52 gengor Exp $
+
+  24 Mar 2009; Gordon Malm <gengor@gentoo.org> k3d-0.7.11.0.ebuild:
+  Add dropped C++ stack-protector filtering.
 
 *k3d-0.7.11.0 (23 Mar 2009)
 
